2006-09-23  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/app/views/shared/MT/pagelink.rhtml: Copy from default/pagelink.rhtml

	* donrails/app/views/notes/show_category.rhtml: Fix to apply theme.

	* donrails/test/functional/notes_controller_test.rb (NotesControllerTest::test_parse_nums__1): Fix for routes.rb change.
	(NotesControllerTest::test_index): Skip when DEFAULT_THEME is MT.

	* donrails/app/views/notes/show_title.rhtml: Add dummy file to prevent template error for functional test.

  	* donrails/app/views/notes/pick_article_a2.rhtml: Fix parameter to call shared/comment

	* donrails/app/views/shared/MT/title-articles2no.rhtml: Add file.

	* donrails/app/views/notes/pick_article_a2.rhtml: Fix to use render file.

2006-09-23  Akira TAGOH  <at@gclab.org>

	* donrails/app/views/shared/MT/simple-category.rhtml: new file.

	* donrails/app/views/shared/default/nextlink2.rhtml: moved into the
	dfeault folder.

	* donrails/app/views/notes/default/show_title.rhtml: reflect the
	layout name from current theme.

	* donrails/app/views/notes/pick_article_a2.rhtml: likewise.

	* donrails/example/index.rhtml: likewise.

	* donrails/example/index.rhtml: fixed a
	space-before-argument-parentheses issue.

	* donrails/app/models/trackback.rb: fixed a LocalJumpError.

2006-09-23  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/test/integration/browse_story_test.rb: Fix

	* donrails/app/views/notes/default/show_title.rhtml: moved into the default folder.

	* donrails/app/views/notes/MT/show_title.rhtml: added a MovableType style.
	* donrails/app/controllers/notes_controller.rb (NotesController::show_title): Fix for apply MT style.

2006-09-22  ARAKI Yasuhiro  <yasu@debian.or.jp>

	* donrails/test/unit/article_test.rb (ArticleTest::test_renew_mtime): Fix to apply ruby1.8.5.

2006-09-22  Akira TAGOH  <at@gclab.org>

	* donrails/app/views/layouts/MT/notes.rhtml: use RDF_TITLE.

	* donrails/app/controllers/notes_controller.rb (NotesController):