@@ -1,7 +1,6 @@
 require 'kconv'
 
 class Comment < ActiveRecord::Base
-#  has_and_belongs_to_many :articles, :join_table => "comments_articles"
   belongs_to :article
   validates_presence_of :author
   validates_length_of :password, :minimum => 4
